--- a/BowlingCoreMVC/appsettings.json
+++ b/BowlingCoreMVC/appsettings.json
@@ -1,11 +1,14 @@
 ﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BowlingCoreMVC-1;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BowlingCoreMVC-1;Trusted_Connection=True;MultipleActiveResultSets=true"
+  //},
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
-  }
+  },
+  "Vault": "BowlingCoreMVCSecrets",
+  "ClientId": "Azure AD application Id",
+  "ClientSecret": "Azure AD Key"
 }
