--- a/BowlingCoreMVC/bundleconfig.json
+++ b/BowlingCoreMVC/bundleconfig.json
@@ -20,5 +20,18 @@
     },
     // Optionally generate .map file
     "sourceMap": false
+  },
+  {
+    "outputFileName": "wwwroot/js/editgame.min.js",
+    "inputFiles": [
+      "wwwroot/js/editgame.js"
+    ],
+    // Optionally specify minification options
+    "minify": {
+      "enabled": true,
+      "renameLocals": true
+    },
+    // Optionally generate .map file
+    "sourceMap": false
   }
 ]
