--- a/BowlingCoreMVC/BowlingCoreMVC.csproj
+++ b/BowlingCoreMVC/BowlingCoreMVC.csproj
@@ -19,6 +19,10 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
+  </ItemGroup>
+
   <!--<ItemGroup>
     <PackageReference Update="Microsoft.NETCore.App" Version="2.2.1" />
   </ItemGroup>-->
