Lots of stuff I think? This was all setting up on my new pc, and trying to get back into it after a long time. Some things cleaned up - trying to finish out the project

--- a/BowlingCoreMVC/appsettings.json
+++ b/BowlingCoreMVC/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
-  //"ConnectionStrings": {
-  //  "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BowlingCoreMVC-1;Trusted_Connection=True;MultipleActiveResultSets=true"
-  //},
+  // "ConnectionStrings": {
+  //  "efaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BowlingCoreMVC_DB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  // },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
@@ -10,5 +10,10 @@
   },
   "Vault": "BowlingCoreMVCSecrets",
   "ClientId": "Azure AD application Id",
-  "ClientSecret": "Azure AD Key"
+  "ClientSecret": "Azure AD Key",
+
+
+  // Re-added for new pc. How did it run without this before?
+  // Also, REMOVE THIS BEFORE PUBLISH (4-29-19)
+  //"faultConnection": "Server=(localdb)\\mssqllocaldb;Database=BowlingCoreMVC_DB;Trusted_Connection=True;MultipleActiveResultSets=true"
 }
